--- a/src/components/Admin/Content/ManageUser.scss
+++ b/src/components/Admin/Content/ManageUser.scss
@@ -30,3 +30,17 @@
         }
     }
 }
+
+.manage-user-container{
+    padding: 10px;
+    .title{
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .users-content{
+        .btn-add-new{
+            margin: 15px 0;
+        }
+    }
+}
